# serde_edifact

./: CHANGELOG.md  Cargo.toml  README.md
src/: de.rs  lib.rs  ser.rs
